# Rust-Password-Manager

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  linux-mac-install.sh  linux-mac-uninstall.sh  release.sh  windows-install.ps1  windows-uninstall.ps1
src/: args.rs  main.rs  storage.rs
