[package]
name = "pm"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.8.2", features = ["derive"] }
